--- a/style.css
+++ b/style.css
@@ -90,11 +90,13 @@ body{
 }
 
 .container .card .display h2{
-    font-size: 3rem;
+    font-size: 3.2rem;
+    
 }
 
 .container .card .display h3{
     font-size: 2rem;
+    font-family:Arial, Helvetica, sans-serif;
     padding-bottom: 1rem;
 }
 
@@ -119,6 +121,9 @@ body{
 }
 
 @media (max-width: 768px) {
+    *{
+        overflow: hidden;
+    }
     .container .card {
         width: 90%; /* Make the card take up 90% of the screen width */
         height: auto; /* Allow the card height to adjust based on content */
@@ -129,11 +134,15 @@ body{
     }
 
     .container .card .display h1 {
-        font-size: 2rem; /* Adjust the font size for the temperature */
+        font-size: 2.5rem; /* Adjust the font size for the temperature */
     }
 
     .container .card .display h2 {
-        font-size: 1.5rem; /* Adjust the font size for the city */
+        font-size: 2.2rem; /* Adjust the font size for the city */
+    }
+
+    .container .card .display h3{
+        font-size:1.5rem;
     }
 
     .container .card .details {
